--- a/.github/workflows/setup-pyton.yml
+++ b/.github/workflows/setup-pyton.yml
@@ -1,6 +1,14 @@
-steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-python@v4
-  with:
-    python-version: '3.10' 
-- run: python my_script.py
+name: Setup Python
+
+on: workflow_dispatch
+jobs:
+  setup-python:
+    # Specify on which operating system we want this workflow to run
+    runs-on: ubuntu-20.04
+    # The steps that will be excuted
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10' 
+    - run: python my_script.py
