--- a/.github/workflows/setup-pyton.yml
+++ b/.github/workflows/setup-pyton.yml
@@ -11,4 +11,5 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10' 
-    - run: python lib_test.py
+    - run:
+        python -m pip install pytest
