--- a/.github/workflows/setup-pyton.yml
+++ b/.github/workflows/setup-pyton.yml
@@ -12,4 +12,4 @@ jobs:
       with:
         python-version: '3.10' 
     - run:
-        python -m pip install pytest
+        pip install -r requirements.txt
