--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,3 +15,20 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run tests
         run: pytest
+  deploy-code:
+    runs-on: ubuntu-20.04
+    needs:
+      - run-tests
+    if: needs.run-tests.result == 'success'
+    steps:
+      - name: Access VPS
+        run: echo "Accessing VPS now"
+  inform-failure:
+    runs-on: ubuntu-20.04
+    needs:
+      - run-tests
+    if: needs.run-tests.result == 'failure'
+    steps:
+      - name: Inform about failure
+        run: echo "run-tests failed"
+        
